--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="NOAI - Decentralized Social Network">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-        
+
   <!-- iOS PWA meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -40,8 +40,15 @@
 
   <title>NOAI</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- iOS Safari specific fixes -->
+  <link rel="stylesheet" href="ios-fixes.css">
+
+  <!-- Additional iOS meta tags for better Safari support -->
+  <meta name="format-detection" content="telephone=no">
+  <meta name="apple-mobile-web-app-title" content="NOAI">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
-</html>   
+</html>
