`Added RepaintBoundary to improve scrolling performance and added interactive-widget meta tag for better touch scrolling on mobile`

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="NOAI - Decentralized Social Network">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content">
+  
+  <!-- Enable better touch scrolling performance on mobile -->
+  <style>
+    body {
+      touch-action: pan-y pan-x;
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: contain;
+    }
+    * {
+      -webkit-tap-highlight-color: transparent;
+    }
+  </style>
 
   <!-- iOS PWA meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
