`Removed notification icon badge and replaced with a simple icon, updated feed screen to display a loading indicator when posts are being loaded, and added a "No posts yet" message when the feed is empty`

--- a/index.html
+++ b/index.html
@@ -19,19 +19,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="NOAI - Decentralized Social Network">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-content">
-  
-  <!-- Enable better touch scrolling performance on mobile -->
-  <style>
-    body {
-      touch-action: pan-y pan-x;
-      -webkit-overflow-scrolling: touch;
-      overscroll-behavior: contain;
-    }
-    * {
-      -webkit-tap-highlight-color: transparent;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
   <!-- iOS PWA meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -61,10 +49,6 @@
   <meta name="apple-mobile-web-app-title" content="NOAI">
 </head>
 <body>
-  <script>
-  window.flutterWebRenderer = "html";
-</script>
-
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
